--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@pinecone-database/pinecone": "^3.0.1",
+    "axios": "^1.7.5",
     "cheerio": "^1.0.0",
     "next": "14.2.5",
     "openai": "^4.56.0",
